<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_record"
        android:title="@string/pref_record_title" >

        <pl.mrwojtek.sensrec.app.util.SwitchPreference
            android:key="pref_file_save"
            android:title="@string/pref_file_save"
            android:defaultValue="true" />

        <pl.mrwojtek.sensrec.app.util.Preference
            android:key="pref_network"
            android:title="@string/pref_network" />

        <pl.mrwojtek.sensrec.app.util.SwitchPreference
            android:key="pref_save_binary"
            android:title="@string/pref_save_binary"
            android:defaultValue="true" />

        <pl.mrwojtek.sensrec.app.util.Preference
            android:key="pref_sampling_period"
            android:title="@string/pref_sampling_period" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_sensors"
        android:title="@string/pref_sensors_title" />

</PreferenceScreen>