<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_select_all"
        android:orderInCategory="100"
        android:title="@string/action_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="200"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_variant_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />


</menu>